# hybrid-coding-eval

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DATA  LICENSE.md  NOTICE.md  PLAN.md  README.md  SECURITY.md  arena  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  new_model.md  reproducibility_issue.md
.github/workflows/: ci.yml  release.yml
analysis/: all.py  arqgc.py  decision_matrix.py
archive/docs/: OSS_REVIEW.md  RUNANYWHERE_INTEGRATION.md
article/: DRAFT.md
benchmark/humaneval_plus/: README.md  __init__.py  adapter.py  tasks.jsonl
benchmark/swebench_verified/: README.md  adapter.py  verify_harness.py
configs/: schema.json  v1.4-canonical-gemma4.yaml  v1.4-canonical-qwen3-coder.yaml  v1.4-canonical-qwen3.6.yaml  v1.4-opencode-fairness.yaml  v1.4-real-prs.yaml  v1.4-smoke.yaml  v1.4-strategy-sweep.yaml  v1.5-hard-gemma4.yaml  v1.5-hard-qwen3.6.yaml  v1.5-hard-smoke.yaml
configs/pricing/: pricing_tables.json
configs/variants/: 07-v3-devstral-all-routes.yaml  12-r3-strategy-heuristic.yaml  13-r3-strategy-rules.yaml  14-r3-strategy-llm-classifier.yaml  15-r3-strategy-embedding-knn.yaml  16-r3-strategy-cascade.yaml  17-qwen3coder-all-routes.yaml  18-qwen2.5coder-all-routes.yaml  19-glm47flash-all-routes.yaml  20-gemma4-26b-all-routes.yaml  21-qwen3.6-27b-mxfp8-all-routes.yaml  22-qwen3.6-35b-a3b-all-routes.yaml  28-v1.3-aider-r7-expanded.yaml  29-v1.3-aider-r7-gemma4.yaml  30-v1.3-aider-r7-cascade-threshold.yaml  _smoke-r5.yaml  _smoke-v3.yaml
docs/: AGENTIC_ROUTES.md  ARTICLE.md  BENCHMARK_NEW_MODEL.md  FINAL_REPORT_PLAN.md  HYBRID_ROUTER_DESIGN.md  HYBRID_ROUTING_DESIGN.md  METHODOLOGY.md  PRIOR_ART.md  REPRODUCING.md  article-draft-v1.md
docs/audits/: T-21-publish-readiness.md  T-22-v3-publish-readiness.md
docs/images/: make_charts.py
docs/release-notes/: v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md  v1.5.0.md  v1.5.1.md
docs/social/: LINKEDIN-POST.md  X-THREAD.md  make_charts.py  social-preview.html
examples/: drop-in-a-new-model.md
lib/: __init__.py  experiment.py  metrics.py  pricing.py  results.py  sandbox.py
logs/v3.3/: INDEX.md
personal/raw-runs/v4-pilot/: variant-17-v4-agent-overnight.yaml
personal/raw-runs/v4.1-pilot/: variant-18-v4.1-qwen3coder-agent.yaml
reports/: APPENDIX_ROUTES.md  ARTICLE.md  FINAL_V3_REPORT.md  ROUTING_RESEARCH_2026-05-18.md  TOKEN_BUDGET.md  token_budget.csv  v3.3-report.html
research/: _run_research.py
research/01_coding_eval_benchmarks/: metadata.json  report.md  results.json
research/02_local_coding_model_performance/: metadata.json  report.md  results.json
research/03_hybrid_coding_architectures_with_empirics/: metadata.json  report.md  results.json
research/04_hardware_reality_and_cost_calibration/: metadata.json  report.md  results.json
results/: REPORT_v1_mvp.md
results/full-sweep-devstral/: aggregate.json  arqgc.json  decision_matrix.md  env-manifest.json
results/full-sweep-r4/: aggregate.json  arqgc.json  decision_matrix.md  env-manifest.json
results/full-sweep-v2/: aggregate.json  arqgc.json  decision_matrix.md
results/runs/: README.md
results/runs/05-r4-catA/: bench-config.json  env-manifest.json  raw.jsonl  run-notes.md
results/runs/07-v3-devstral-all-routes/: aggregate.json  arqgc.json  decision_matrix.md  judge.jsonl  raw.jsonl
results/runs/10-judge-robust/: run-notes.md
results/runs/11-judge-robust-D/: judge.jsonl  run-notes.md
router/: pricing.mjs  server.mjs  strategies.mjs
router/logs/: decisions.jsonl
router/tests/: agent-heuristic.test.mjs  api-tags-stub.test.mjs
runners/: __init__.py  _architect_runner.mjs  _shared.py  r1_cloud_only.py  r2_local_only.py  r3_hybrid_architect.py  r4_minion.py
scorers/: __init__.py  llm_judge.py  swebench.py
scripts/: reproduce.sh
src/hybrid_arena/: __init__.py
src/hybrid_arena/agents/: __init__.py  aider.py  attribution.py  cline.py  mini_swe.py  opencode.py
src/hybrid_arena/analysis/: aggregate.py  all.py  bootstrap.py  (+5 more)
src/hybrid_coding_eval/: __init__.py
tests/: test_aggregate.py  test_arqgc.py  test_bootstrap.py  test_config.py  test_env_detect.py  test_humaneval_plus.py  test_llm_judge.py  test_metrics_new_fields.py  test_orchestrator.py  test_pricing_parity.py  test_pricing_path_parity.py  test_r1_cloud_only.py  test_r2_local_only.py  test_r3_hybrid_architect.py  test_results.py  test_sandbox.py  test_swebench_scorer.py  test_swebench_verified.py  test_viz.py
tests/agents/: test_aider_parser.py  test_claude_code.py  test_cline.py  test_mini_swe.py
tests/analysis/: test_token_budget.py
tests/runners/: test_r10_cline.py  test_r5_devminion.py  test_r6_mini_swe_agent_smoke.py  test_r9_claude_code.py
tests/scorers/: test_real_dev_scorers.py
tests/tasks/: test_refactors_scaffold.py
(+204 files in other folders)
