[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-coding-eval"
version = "0.0.1"
description = "Reproducible cost/latency/quality benchmark comparing local vs cloud vs hybrid LLM routing for coding tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanchit Monga" }]
dependencies = [
    "pytest>=8.3,<9",
    "pandas>=2.2,<3",
    "httpx>=0.27,<1",
    "docker>=7.1,<8",
    "tiktoken>=0.8,<1",
    "openai>=1.50,<2",
    "anthropic>=0.40,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "tests*"]
exclude = ["router*", "EXTERNAL*", "examples-poc*", "research*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end tests that invoke the SWE-bench Docker harness (minutes per test).",
]
