[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-coding-eval"
version = "1.4.1"
description = "Reproducible cost/latency/quality benchmark comparing local vs cloud vs hybrid LLM routing for coding tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanchit Monga" }]
dependencies = [
    "pytest>=8.3,<9",
    "pandas>=2.2,<3",
    "httpx>=0.27,<1",
    "docker>=7.1,<8",
    "tiktoken>=0.8,<1",
    "openai>=1.50,<2",
    "anthropic>=0.40,<1",
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.5,<1",
]
# Python-side agentic runners (R6 mini-swe-agent, R7 aider). R8/R9/R10
# ship as separate Node/npm CLIs and are installed by ``bench setup``.
# Install with: ``pip install -e ".[agents]"``.
agents = [
    "mini-swe-agent>=2.2,<3",
    "aider-chat",
]

[project.scripts]
bench = "hybrid_coding_eval.cli.bench:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hybrid_coding_eval*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: end-to-end tests that invoke the SWE-bench Docker harness (minutes per test).",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "vendor",
    "archive",
    "src/hybrid_coding_eval/benchmarks/real_dev/fixtures",
    "src/hybrid_coding_eval/benchmarks/exercism_python/fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line-length handled by formatter
    "E402",  # imports after sys.path manipulation — intentional pattern in CLIs
    "E702",  # multi-statement lines OK in the few places we use them
    "E741",  # single-letter vars in viz legends are matplotlib conventions
    "F841",  # pandas chains sometimes leave "unused" locals
]
