[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-arena"
version = "1.6.0"
description = "Reproducible cost/latency/quality benchmark comparing local vs cloud vs hybrid LLM routing for coding tasks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sanchit Monga" }]
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "httpx>=0.27,<1",
    "docker>=7.1,<8",
    "tiktoken>=0.8,<1",
    "openai>=1.50,<2",
    "anthropic>=0.40,<1",
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.5,<1",
]
# Python-side coding agents (mini-swe-agent + aider). opencode and cline
# ship as separate Node/npm CLIs and are installed by ``arena setup``.
# Install with: ``pip install -e ".[agents]"``.
agents = [
    "mini-swe-agent>=2.2,<3",
    "aider-chat",
]

[project.scripts]
arena = "hybrid_arena.cli.bench:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hybrid_arena*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "vendor",
    "src/hybrid_arena/tasks/refactors/fixtures",
    "src/hybrid_arena/tasks/puzzles/fixtures",
    "src/hybrid_arena/tasks/real_prs/fixtures",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # line-length handled by formatter
    "E402",  # imports after sys.path manipulation — intentional pattern in CLIs
    "E702",  # multi-statement lines OK in the few places we use them
    "E741",  # single-letter vars in viz legends are matplotlib conventions
    "F841",  # pandas chains sometimes leave "unused" locals
]
